issue: cleared gulp

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,8 @@
-@import "zen-text-field/index";
-
-
+@import "root";
+@import "container";
+@import "notched";
+@import "label";
+@import "input";
+@import "textarea";
+@import "helper";
+@import "placeholder";
