--- a/src/scss/helper.scss
+++ b/src/scss/helper.scss
@@ -1,13 +1,13 @@
 .input-helper {
 	display: flex;
 	justify-content: flex-end;
-	padding: .4rem 1.4rem 0;
-	font-size: 1.3rem;
+	padding: 4px 14px 0;
+	font-size: var(--font-size-helper);
 	line-height: 1.3;
 	color: var(--c-text);
 
 	&__text {
-		padding-right: 1rem;
+		padding-right: 10px;
 		flex: 1;
 	}
 
