--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -1,4 +1,5 @@
 .text-field-container {
+	// Colors
 	--c-inactive: DarkGray;
 	--c-focused: hsla(214, 94%, 43%, 1);
 	--c-activated: Gray;
@@ -8,17 +9,23 @@
 	--c-text: SlateGrey;
 	--c-placeholder: hsla(0,0, 74%, 1);
 
+	// Fonts
 	--font-family: 'Roboto', sans-serif;
-	--font-size-field: 1.6rem;
-	--font-size-helper: 1.2rem;
+	--font-size-field: 16px;
+	--font-size-helper: 12px;
 	--font-weight: 400;
-	--line-height: 2.4rem;
+	--line-height: 24px;
 	--letter-spacing: .009375em;
 
+	// Border
 	--border-color: var(--c-inactive);
-	--border-size-inactive: .1rem;
-	--border-size-active: .2rem;
-	--border-radius: .6rem;
+	--border-size-inactive: 1px;
+	--border-size-active: 2px;
+	--border-radius: 6px;
 
+	// Margins
+
+
+	// Transition
 	--transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
