--- a/src/scss/textarea.scss
+++ b/src/scss/textarea.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	will-change: opacity, transform, color;
 	border-radius: var(--border-radius) var(--border-radius) 0 0;
-	min-height: 8rem;
+	min-height: 80px;
 
 	textarea {
 		resize: none;
@@ -15,8 +15,8 @@
 		width: 100%; height: auto;
 		display: flex;
 		z-index: 1;
-		margin: .8rem .1rem .2rem 0;
-		padding: 0 1.5rem .4rem;
+		margin: 8px 1px 2px 0;
+		padding: 0 15px 4px;
 		font-family: var(--font-family);
 		font-size: var(--font-size-field);
 		line-height: var(--line-height);
@@ -72,8 +72,7 @@
 		}
 
 		label.floating-label--required::after {
-			margin-left: .1rem;
-			font-size: 1.8rem;
+			margin-left: 1px;
 			line-height: 0;
 			content: '*';
 		}
